# cub3d

./: CMakeLists.txt  Makefile  README.md  cub.h  ft_check_error.c  ft_check_file.c  ft_create_window.c  ft_endofline.c  ft_fisrtlookmap.c  ft_get_ceiling.c  ft_get_east.c  ft_get_floor.c  ft_get_north.c  ft_get_params.c  ft_get_resolution.c  ft_get_south.c  ft_get_sprite.c  ft_get_west.c  ft_gnl.c  ft_map_init.c  ft_maxlen.c  ft_player_look.c  ft_secondlookmap.c  ft_start_parsing.c  ft_struct_init.c  ft_validmap.c  main.c  map.cub  map1.cub  mlx_struct.c  move.c  raycast_four.c  raycast_one.c  raycast_three.c  raycast_two.c  screenshot.c  some_sprite_things.c  test.out
get_next_line/: Makefile  a.out  get_next_line.c  get_next_line.h  get_next_line_utils.c  main.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_intstrchr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_spacealloc.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+8 more)
minilibx_mms_20200219/: mlx_image.swiftsourceinfo  mlx_init.swiftsourceinfo  mlx_window.swiftsourceinfo
minilibx_opengl_20191021/: mlx.h  mlx_get_screen_size.m
textures/: 12.xpm  WALL52.xpm  bluestone.xpm  col.xpm  colorstone.xpm  door_sprite.xpm  (+7 more)
